# web-krokomotiva

./: .bazelrc  .drone.yaml  .drone.yml  .gitignore  .mmo.cache  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE  mmo.yaml  pass.txt  swagger.yaml
core/: BUILD.bazel  proto.pb.go
core/protobuf/: proto.proto
infrastructure/: ingress.yaml
infrastructure/shared/: trip.yaml
trip/: BUILD.bazel  proto.pb.go  proto.pb.gw.go  service.go  service_test.go
trip/cmd/trip/: BUILD.bazel  main.go
trip/protobuf/: proto.proto
ui/: .angular-cli.json  .firebaserc  package-lock.json  package.json  tslint.json
ui/api/: api-client-service.ts  index.ts
ui/api/models/: core-health-check-response.model.ts  health-check-response-serving-status.enum.ts  trip-direction-request.model.ts  trip-direction.model.ts  trip-directions.model.ts  trip-place.model.ts  trip-places.model.ts  trip-version.model.ts
ui/src/: DragDropTouch.js  index.html  styles.scss
ui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts  auth.guard.ts  common.ts
ui/src/app/landing/: landing.component.html  landing.component.ts
ui/src/app/platform/: platform.component.ts
ui/src/app/platform/board/: board.component.html  board.component.scss  board.component.ts
ui/src/app/platform/multi-city/: multi-city.component.html  multi-city.component.spec.ts  multi-city.component.ts
ui/src/app/platform/new-trip/: new-trip.component.html  new-trip.component.scss  new-trip.component.ts
ui/src/app/platform/take-me-anywhere/: take-me-anywhere.component.html  take-me-anywhere.component.scss  take-me-anywhere.component.spec.ts  take-me-anywhere.component.ts
ui/src/environments/: environment.prod.ts  environment.ts
