load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gelidus/web-krokomotiva/trip/cmd/trip",
    visibility = ["//visibility:private"],
    deps = [
        "//trip:go_default_library",
        "//vendor/github.com/grpc-ecosystem/grpc-gateway/runtime:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/reflection:go_default_library",
        "//vendor/googlemaps.github.io/maps:go_default_library",
    ],
)

go_image(
    name = "trip",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":trip",
    registry = "gcr.io",
    repository = "peto-199916/web-krokomotiva-trip",
    tag = "$(COMMIT_HASH)",
)
